# artifact

./: .env  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: check.yml  ci.yml  deploy.yml
artifact/: __init__.py  __main__.py
scripts/: db_dump.sh  db_init.sh  ingest.py
sql/: 01_schema.sql
src/edas/: cli.py  config.py  logging_config.py  pipeline.py
src/edas/dashboard/: __init__.py  app.py  queries.py
src/edas/db/: connection.py
src/edas/ingestion/: entsoe_client.py  upsert.py
tests/: __init__.py  test_dashboard_smoke.py  test_dummy.py  test_pipeline_smoke.py  test_pipeline_unit.py
