[tool.poetry]
name = "template-python-project-poetry"
packages = [
    { include = "artifact" },
]
version = "2.4.0"
description = "A template for Python projects, using Poetry"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
# update the Python versions in .github/workflows/check.yml if you change this
python = ">=3.10,<3.14"
pandas = "^2.2"
numpy = "^2"
entsoe-py = "^0.7.8"
sqlalchemy = "^2.0.44"
psycopg2-binary = "2.9.9"
python-dotenv = "^1.2.1"
plotly = "^6.3.1"
dash = "^3.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.37.0"
poetry = "^1.8.3"
pytest = "^8.2.2"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy artifact tests"
compile = "python -m compileall artifact tests"

[tool.poetry.scripts]
artifact = "artifact:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.mypy]
ignore_missing_imports = true
