[tool.poetry]
name = "unibo-dtm-se-energyanalyticsdashboard"
version = "0.2.0"
description = "Energy Analytics Dashboard: ENTSO-E ingestion to PostgreSQL + Dash UI"
authors = ["Romina Gharehmohammadi <romi.gharehmohammadi@studio.unibo.it>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "edas", from = "src" }]
keywords = ["energy", "entsoe", "dash", "postgresql", "analytics"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = "^2.2"
numpy = "^2"
entsoe-py = "^0.7.8"
sqlalchemy = "^2.0.44"
psycopg2-binary = "2.9.9"
python-dotenv = "^1.2.1"
plotly = "^6.3.1"
dash = "^3.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.37.0"
poetry = "^1.8.3"
pytest = "^8.2.2"
loguru = "^0.7.3"
types-requests = "^2.32.4.20250913"
types-pyyaml = "^6.0.12.20250915"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy src tests"
compile = "python -m compileall src tests"

[tool.poetry.scripts]
edas-ingest = "edas.cli:ingest_main"
edas-dashboard = "edas.cli:dashboard_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.mypy]
ignore_missing_imports = true
